documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API USHORT __stdcall L13_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API VOID __stdcall L13_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API MSGADDR __stdcall L13_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ULONG __stdcall L13_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ULONG __stdcall L13_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

L13W32API ULONG __stdcall L13_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);

L13W32API ULONG __stdcall L13_Div(ULONG diva,ULONG divb);

L13W32API INT __stdcall L13_DllUsageCount(VOID);

L13W32API USHORT __stdcall L13_DPMMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_DPMRdB(ULONG addrval,HCARD handleval);

L13W32API ULONG __stdcall L13_DPMRdL(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API USHORT __stdcall L13_DPMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMWrB(USHORT value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMWrL(ULONG value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_DPMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspBioClear(HCARD handleval);

L13W32API USHORT __stdcall L13_DspBioRd(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspBioSet(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspHmClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspHmSet(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspIntfClear(HCARD handleval);

L13W32API BOOL __stdcall L13_DspIntfRead(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspIntmClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspIntmSet(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspXfClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_DspXfSet(HCARD handleval);

L13W32API LPCSTR __stdcall L13_ErrDesc(INT errval);

L13W32API LPCSTR __stdcall L13_ErrDescStr(INT errval);

L13W32API LPCSTR __stdcall L13_ErrName(INT errval);

L13W32API BOOL __stdcall L13_ErrorIsTaggedBC(MSGADDR msgaddr,HCARD handleval);

L13W32API BOOL __stdcall L13_ErrorIsTaggedRT(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorResponse(USHORT responseval,HCARD handleval);

L13W32API VOID __stdcall L13_ErrorSync(BOOL value,HCARD handleval);

L13W32API ERRVAL __stdcall L13_ErrorTimeout(USHORT timeoutval,HCARD handleval);

L13W32API VOID __stdcall L13_ErrorWatch(BOOL value,HCARD handleval);

L13W32API VOID __stdcall L13_ErrorWatchWr(ULONG value,HCARD handleval);

L13W32API VOID __stdcall L13_ErrorWatchWrEx(ULONG value,HCARD handleval);

L13W32API BOOL __stdcall L13_ExtDinRd(HCARD handleval);

L13W32API VOID __stdcall L13_ExtDinWr(BOOL dinval,HCARD handleval);

L13W32API BOOL __stdcall L13_ExtDoutRd(HCARD handleval);

L13W32API VOID __stdcall L13_ExtDoutWr(BOOL doutval,HCARD handleval);

L13W32API VOID __stdcall L13_FileClose(LPVOID handle);

L13W32API BOOL __stdcall L13_FileErr(VOID);

L13W32API VOID __stdcall L13_FileErrClr(VOID);

L13W32API VOID __stdcall L13_FileErrSet(VOID);

L13W32API LPVOID __stdcall L13_FileOpenRead(LPCSTR filename);

L13W32API LPVOID __stdcall L13_FileOpenWrite(LPCSTR filename);