documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescOptRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DescOptRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescOptWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DescOptWr(UInt16 descopt, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescPtrRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescPtrRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescPtrWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescPtrWr(UInt32 msgaddr, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescRd@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescWr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_Div(UInt32 diva, UInt32 divb);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DllUsageCount();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DPMMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DPMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DPMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DPMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DPMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DPMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspBioClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspBioClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DspBioRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspBioSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspBioSet(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspHmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspHmClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspHmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspHmSet(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspIntfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspIntfClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspIntfRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspIntfRead(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspIntmClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspIntmSet(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspXfClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DspXfSet(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L13_ErrDesc(Int32 errval);
        public static string L13_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_L13_ErrDesc(errval)); }
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L13_ErrDescStr(Int32 errval);
        public static string L13_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_L13_ErrDescStr(errval)); }
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L13_ErrName(Int32 errval);
        public static string L13_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_L13_ErrName(errval)); }
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorIsTaggedBC@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorIsTaggedBC(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorIsTaggedRT@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorIsTaggedRT(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorResponse@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorResponse(UInt16 responseval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorSync@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ErrorSync(Int32 value, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorTimeout(UInt16 timeoutval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorWatch@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ErrorWatch(Int32 value, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorWatchWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ErrorWatchWr(UInt32 value, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorWatchWrEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ErrorWatchWrEx(UInt32 value, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ExtDinRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ExtDinWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ExtDinWr(Int32 dinval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ExtDoutRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ExtDoutRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ExtDoutWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ExtDoutWr(Int32 doutval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_FileClose(IntPtr handle);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_FileErr();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_FileErrClr();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_FileErrSet();
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L13_FileOpenRead(ref string filename);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L13_FileOpenWrite(ref string filename);
